# aifinpay

./: Anchor.toml
programs/robopay-contract/: Cargo.toml
programs/robopay-contract/src/: lib.rs
scripts/: initialize.ts
tests/: robopay-contract.ts
